<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.admin.shopkeeper.ui.activity.orderFood.OrderFoodActivity"
    tools:showIn="@layout/activity_order_food">

    <FrameLayout
        android:id="@+id/top_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:background="#EFEFF4"
        android:padding="@dimen/_15sdp"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/food_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/bg_search"
            android:hint="搜索"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="@dimen/_24ssp" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/_20sdp"
            android:src="@mipmap/input_clear"
            android:visibility="invisible" />
    </FrameLayout>

    <com.flipboard.bottomsheet.BottomSheetLayout
        android:id="@+id/bottomsheet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_search">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/leftRecyclerView"
                android:layout_width="78dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.admin.shopkeeper.weight.TouchableRecyclerView
                android:id="@+id/rightRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/leftRecyclerView"
                app:layout_constraintRight_toLeftOf="@+id/quickIndexBar"
                app:layout_constraintTop_toTopOf="parent" />

            <com.admin.shopkeeper.weight.QuickIndexBar
                android:id="@+id/quickIndexBar"
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </com.flipboard.bottomsheet.BottomSheetLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:background="#f7f7fa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/cart"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@drawable/selector_cart"
            android:src="@mipmap/cart_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/totalMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_30ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/cart"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="￥560.00" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_food_btn"
            android:enabled="false"
            android:text="@string/other_bill"
            android:textColor="@color/white"
            android:textSize="@dimen/_32ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="304dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/quickBill"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_food_scan_btn"
            android:enabled="false"
            android:text="@string/quick_bill"
            android:textColor="@color/white"
            android:textSize="@dimen/_32ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/scanBill"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_food_quickbtn"
            android:enabled="false"
            android:text="@string/scan_bill"
            android:textColor="@color/white"
            android:textSize="@dimen/_32ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/quickBill"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/row_number"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/shape_button"
            android:enabled="true"
            android:gravity="center"
            android:hint="排号"
            android:inputType="number"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/_30ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/scanBill"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/queryLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/queryBg"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_search">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/queryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
